--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,6 +13,18 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="DividerStyle">
+        <item name="background">@color/teal_200</item>
+        <item name="android:radius">8dp</item>
+        <item name="height">20dp</item>
+        <item name="android:layout_height">20dp</item>
+    </style>
+
+    <style name="AdditionalIconStyle">
+        <item name="android:layout_width">40dp</item>
+        <item name="android:layout_height">40dp</item>
+    </style>
     
     <style name="IconButton" parent="Widget.MaterialComponents.Button.Icon">
         <item name="iconTint">?attr/colorControlNormal</item>
